1.Schritt zu 75% fertig

--- a/src/html/login.html
+++ b/src/html/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ChatApp</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
 
 </head>
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <section class="form signup">
         <header>Chat App</header>
-        <form action="#" method="POST" enctype="multipart/form-data" autocomplete="off">
+        <form action="../php/login.php" method="POST" enctype="multipart/form-data" autocomplete="off">
           <div class="error-text"></div>
          
           <div class="field input">
