--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ChatApp</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
 
 </head>
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <section class="form signup">
         <header>Chat App</header>
-        <form action="#" method="POST" enctype="multipart/form-data" autocomplete="off">
+        <form action="../php/regi.php" method="POST" enctype="multipart/form-data" autocomplete="off">
           <div class="error-text"></div>
           <div class="name-details">
             <div class="field input">
@@ -36,10 +36,6 @@
             <label>Passwort</label>
             <input type="password" name="password" placeholder="Passwort" required>
             <i class="fas fa-eye"></i>
-          </div>
-          <div class="field image">
-            <label>Profilbild</label>
-            <input type="file" name="image" accept="image/x-png,image/gif,image/jpeg,image/jpg" required>
           </div>
           <div class="field button">
             <input type="submit" name="submit" value="Continue to Chat">
