--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,7 +11,6 @@
 
 </head>
 
-
 <body>
     <div class="wrapper">
       <section class="form signup">
@@ -30,7 +29,7 @@
           </div>
           <div class="field input">
             <label>Email</label>
-            <input type="text" name="email" placeholder="Email" required>
+            <input type="email" name="email" placeholder="Email" required>
           </div>
           <div class="field input">
             <label>Passwort</label>
@@ -41,7 +40,7 @@
             <input type="submit" name="submit" value="Continue to Chat">
           </div>
         </form>
-        <div class="link">Account bereits vorhanden? <a href="login.php">Hier einloggen</a></div>
+        <div class="link">Account bereits vorhanden? <a href="login.html">Hier einloggen</a></div>
       </section>
     </div>
   
