--- a/src/html/login.html
+++ b/src/html/login.html
@@ -32,7 +32,7 @@
             <input type="submit" name="submit" value="Continue to Chat">
           </div>
         </form>
-        <div class="link">Account noch nicht vorhanden? <a href="login.php">Hier Account erstellen</a></div>
+        <div class="link">Account noch nicht vorhanden? <a href="index.html">Hier Account erstellen</a></div>
       </section>
     </div>
   
