--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,7 @@
 
 </head>
 
+
 <body>
     <div class="wrapper">
       <section class="form signup">
@@ -29,7 +30,7 @@
           </div>
           <div class="field input">
             <label>Email</label>
-            <input type="email" name="email" placeholder="Email" required>
+            <input type="text" name="email" placeholder="Email" required>
           </div>
           <div class="field input">
             <label>Passwort</label>
